k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookmyshow
  labels:
    app.kubernetes.io/part-of: bookmyshow
